missed one item on assignment

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <li>Larry</li>
     <table class="table border table table-hover table-dark table-hover table-bordered table striped table-sm justify-content-space-between table margin-5">
         <thead>
-            <tr class="table-padding-">
+            <tr >
                 <th>Front-End</th>
                 <th>Backend</th>
                 <th>Web DevTools</th>
@@ -80,12 +80,12 @@
                 <td>VS Code</td>
             </tr>
             <tr>
-                <td>JavaScript</td>
+                <td>CSS</td>
                 <td>Express</td>
                 <td>Terminal</td>
             </tr>
             <tr class="bg-primary">
-                <td class="bg-primary">CSS</td>
+                <td class="bg-primary">JavaScript</td>
                 <td class="bg-primary">MongoDB</td>
                 <td class= "bg-primary">Git</td>
             </tr>
@@ -99,9 +99,9 @@
 
     <br>
     <div class="row">
-        <div class="bg-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis sed tempore ut, porro omnis fugit voluptatum ratione accusantium adipisci libero aliquid placeat reprehenderit eos quaerat aperiam! Soluta, modi libero!</div>
+        <div class="bg-primary col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facilis sed tempore ut, porro omnis fugit voluptatum ratione accusantium adipisci libero aliquid placeat reprehenderit eos quaerat aperiam! Soluta, modi libero!</div>
 
-        <div class="bg-warning">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sint magnam omnis nostrum tenetur repudiandae asperiores incidunt in odit architecto rerum quo officia ipsum, iusto nemo delectus dolorum corrupti eaque.</div>
+        <div class="bg-warning col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur sint magnam omnis nostrum tenetur repudiandae asperiores incidunt in odit architecto rerum quo officia ipsum, iusto nemo delectus dolorum corrupti eaque.</div>
     </div>
     <div class="row">
         <div class="bg-info col-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, voluptates sint veritatis facilis dolorum quos dolores consequuntur eveniet obcaecati alias eaque repellat praesentium quas officiis dolorem rerum neque, architecto iure?</div>
